# picoctf

./: README.md  flake.nix
05/: cabal.nix  x05.cabal
challenges/02/: 02.hs
challenges/05/: cabal.nix  x05.cabal
challenges/05/app/: Main.hs
challenges/05/src/: MyLib.hs
challenges/06/: cabal.nix  x06.cabal
challenges/06/app/: Main.hs
