cabal-version:      3.0
name:               x05
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable x05
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        exiftool,
        text,
        base64
    hs-source-dirs:   app
    default-language: Haskell2010
